--- a/index.html
+++ b/index.html
@@ -635,6 +635,12 @@
 		</div>
 	</div>
 	
+	<div class="modal-form">
+		<div class="modal-form__wrap">
+			<h3 class="modal-form__h">&</h3>
+			<button class="btn form__close">закрыть</button>
+		</div>
+	</div>
 	
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAD-N55uT4bDIwV7xqmwUvUvmUgohgWcBE&callback=initMap"
     async defer></script>
